[project]
name = "python-package-popularity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tom Nurkkala", email = "thomas.nurkkala@peratonlabs.com" }]
requires-python = ">=3.11.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "typer>=0.15.2",
]

[project.scripts]
pypi-pop = "python_package_popularity.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
