[project]
name = "python-package-popularity"
version = "0.1.0"
description = "Show statistics on python package downloads"
readme = "README.md"
authors = [{ name = "Tom Nurkkala", email = "tom.nurkkala@gmail.com" }]
requires-python = ">=3.11.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.scripts]
pypi-pop = "python_package_popularity.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
